<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/speed"
                    android:textAlignment="center"
                    android:textSize="32px"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tv_speed"
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:gravity="center"
                    android:text="0m/s"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:weightSum="3"
                >

                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/tv_compass"
                    android:text="@string/compass"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/tv_battery"
                    android:text="@string/battery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/tv_time"
                    android:text="@string/time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            >
            <TextView
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/home_gps"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tv_lat"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/default_lat"
                android:layout_height="0dp"
                android:paddingStart="10dp" />

            <TextView
                android:id="@+id/tv_lng"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/default_lng"
                android:layout_height="0dp"
                android:paddingStart="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="150dp"
        android:layout_height="0px"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/mode"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50px"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/auto"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swb_auto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    app:thumbTint="@color/green" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/ctrl"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swb_ctrl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    app:thumbTint="@color/green" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/free"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swb_free"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    app:thumbTint="@color/green" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bc_water_information"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="MissingClass" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/control_dashboard"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/motor_speed"
                    android:layout_width="150dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tv_motor_speed"
                    android:textSize="50px"
                    android:gravity="center"
                    android:text="@string/default_motor_speed"
                    android:textColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            
            <SeekBar
                android:id="@+id/sb_set_speed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/ib_left"
                    android:src="@mipmap/ic_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:shadowColor="@color/red"
                    android:text="@string/stop_btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/ib_right"
                    android:src="@mipmap/ic_rightlauncher_round"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>